<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/img_top"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginTop="40dp"
                android:src="@drawable/mandalas" />

        <TextView
                android:id="@+id/tv_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_top"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/chalkboard_regular"
                android:text="@string/app_name"
                android:textColor="@color/tim_than"
                android:textSize="@dimen/_25sdp" />

        <TextView
                android:id="@+id/tv_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_top"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/chalkboard_regular"
                android:text="@string/bring_color"
                android:textColor="@color/text_color_new"
                android:textSize="@dimen/_18sdp" />

        <Button
                android:id="@+id/btn_start"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_second"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_start"
                android:fontFamily="@font/chalkboard_regular"
                android:text="@string/start"
                android:textColor="@android:color/white"
                android:visibility="gone" />


        <LinearLayout
                android:id="@+id/layout_ads"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/btn_start"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:orientation="vertical"
                android:visibility="gone" />
    </RelativeLayout>

</ScrollView>