<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tranparent"
        android:theme="@style/NewDialog">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/background_gradient_border"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/rate" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7sdp"
                android:text="@string/rate_app"
                android:textColor="@color/tim_than"
                android:textSize="@dimen/_20sdp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/pls_rate_app"
                android:textColor="#2196F3"
                android:textSize="@dimen/_12sdp" />


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/one_star"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/star_grey" />

            <ImageView
                    android:id="@+id/two_star"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/star_grey" />

            <ImageView
                    android:id="@+id/three_star"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/star_grey" />

            <ImageView
                    android:id="@+id/four_star"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/star_grey" />

            <ImageView
                    android:id="@+id/five_star"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/star_grey" />
        </LinearLayout>


        <RelativeLayout
                android:id="@+id/layout_send_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/border_save_button"
                android:padding="@dimen/_8sdp">

            <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/send_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_toLeftOf="@+id/txt1"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_fb_send" />

        </RelativeLayout>


        <TextView
                android:id="@+id/btn_later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/later"
                android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <ImageView
            android:id="@+id/btn_close_dialog"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_exit" />

</RelativeLayout>